[gd_scene load_steps=3 format=3 uid="uid://dqdlnhw4df3bj"]

[ext_resource type="Script" uid="uid://dgohh0blapjn" path="res://delivery_area.gd" id="1_waxgd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iotsf"]
size = Vector2(13, 14)

[node name="DeliveryArea" type="Area2D"]
script = ExtResource("1_waxgd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -1)
shape = SubResource("RectangleShape2D_iotsf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
